# Raven

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TodoList2023.md  xmake.lua
RavenCore/: CMakeLists.txt  xmake.lua
RavenCore/include/Raven/: Raven.h  defines.h.in
RavenCore/include/Raven/accelerate/: bvh.h  kdTree.h
RavenCore/include/Raven/camera/: projectiveCamera.h
RavenCore/include/Raven/core/: aabb.h  accelerate.h  base.h  bsdf.h  bxdf.h  camera.h  distribution.h  film.h  filter.h  image.h  integrator.h  interaction.h  light.h  material.h  math.h  media.h  medium.h  mipmap.h  object.h  primitive.h  programe.h  ray.h  renderer.h  sampler.h  scene.h  shape.h  spectrum.h  texture.h  transform.h
RavenCore/include/Raven/filter/: gaussian.h
RavenCore/include/Raven/integrator/: normal.h  path.h  volpath.h
RavenCore/include/Raven/light/: areaLight.h  infiniteAreaLight.h
RavenCore/include/Raven/material/: glass.h  matte.h  mirror.h  plastic.h
RavenCore/include/Raven/medium/: homogeneous.h
RavenCore/include/Raven/renderer/: path.h
RavenCore/include/Raven/sampler/: stratified.h
RavenCore/include/Raven/shading/: lambertain.h  microfacet.h  oren_nayar.h  specular.h
RavenCore/include/Raven/shape/: mesh.h  sphere.h
RavenCore/include/Raven/textute/: imageTexture.h  mapping.h  solidTexture.h
RavenCore/include/Raven/utils/: factory.h  imageLoader.h  loader.h  log.h  memory.h  parser.h  propertylist.h
RavenCore/src/: Raven.cpp
RavenCore/src/accelerate/: bvh.cpp  kdTree.cpp
RavenCore/src/camera/: projectiveCamera.cpp
RavenCore/src/core/: accelerate.cpp  base.cpp  bsdf.cpp  bxdf.cpp  film.cpp  image.cpp  integrator.cpp  interaction.cpp  light.cpp  material.cpp  math.cpp  media.cpp  medium.cpp  mipmap.cpp  object.cpp  primitive.cpp  renderer.cpp  sampler.cpp  scene.cpp  shape.cpp  spectrum.cpp  texture.cpp  transform.cpp
RavenCore/src/integrator/: normal.cpp  path.cpp  volpath.cpp
RavenCore/src/light/: areaLight.cpp  infiniteAreaLight.cpp
RavenCore/src/material/: glass.cpp  matte.cpp  mirror.cpp  plastic.cpp
RavenCore/src/medium/: homogeneous.cpp
RavenCore/src/renderer/: normal.cpp  path.cpp
RavenCore/src/sampler/: stratified.cpp
RavenCore/src/shading/: lambertain.cpp  microfacet.cpp  oren_nayar.cpp  specular.cpp
RavenCore/src/shape/: mesh.cpp  sphere.cpp
RavenCore/src/texture/: imageTexture.cpp  mapping.cpp  solidTexture.cpp
RavenCore/src/utils/: factory.cpp  loader.cpp  log.cpp  parser.cpp  propertylist.cpp
models/material-testball/: LISENCE
models/teapot/teapot/: LICENSE.txt
src/: CMakeLists.txt  Raven.cpp  Raven.h
src/accelerate/: bvh.cpp  bvh.h  kdTree.cpp  kdTree.h  primitiveList.cpp  primitiveList.h
src/camera/: projectiveCamera.cpp  projectiveCamera.h
src/core/: aabb.h  accelerate.cpp  accelerate.h  base.cpp  base.h  bsdf.cpp  bsdf.h  bxdf.cpp  bxdf.h  camera.h  distribution.h  film.cpp  film.h  filter.h  image.cpp  image.h  interaction.cpp  interaction.h  light.h  material.h  math.cpp  math.h  mipmap.cpp  mipmap.h  primitive.cpp  primitive.h  ray.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shape.cpp  shape.h  spectrum.cpp  spectrum.h  texture.cpp  texture.h  transform.cpp  transform.h
src/filter/: gaussian.h
src/light/: areaLight.cpp  areaLight.h  infiniteAreaLight.cpp  infiniteAreaLight.h
src/material/: glass.cpp  glass.h  matte.cpp  matte.h  mirror.cpp  mirror.h  plastic.cpp  plastic.h
src/renderer/: normal.cpp  normal.h  path.cpp  path.h  simplified.cpp  simplified.h  test.cpp  test.h
src/shading_model/: lambertain.cpp  lambertain.h  microfacet.cpp  microfacet.h  oren_nayar.cpp  oren_nayar.h  specluar.cpp  specular.cpp  specular.h
src/shape/: mesh.cpp  mesh.h  sphere.cpp  sphere.h
src/texture/: imageTexture.cpp  imageTexture.h  mapping.cpp  mapping.h  mapping2D.h  solidTexture.cpp  solidTexture.h
src/utils/: loader.cpp  loader.h  memory.h  mipmap.cpp  mipmap.h  parser.cpp  parser.h  propertylist.cpp  propertylist.h
vender/: README.md
