# CMakeList.txt: 顶层 CMake 项目文件，在此处执行全局配置
# 并包含子项目。
#

CMAKE_MINIMUM_REQUIRED (VERSION 3.8)
SET(CMAKE_CXX_STANDARD 17)

PROJECT (Raven)

# SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}/Zi")
# SET(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE}/DEBUG /OPT:REF /OPT:ICF")


find_package(tinyxml2 CONFIG REQUIRED)

find_package(Stb REQUIRED)

FIND_PACKAGE(tinyobjloader CONFIG REQUIRED)

add_compile_definitions(RAVEN_PATH="${PROJECT_SOURCE_DIR}")

#配置OpenMP
FIND_PACKAGE(OpenMP REQUIRED)
IF(OPENMP_FOUND)
MESSAGE("OPENMP FOUND")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FALGS} ${OpenMP_EXE_LINKER_FLAGS}")
ENDIF()

# 包含子项目。
ADD_SUBDIRECTORY(RavenCore)
